# mendr

./: .gitignore  CODEMETA.yaml  CODEOWNERS  README.md  pyproject.toml  results.dvc
.dvc/: config
data/: .gitignore  block.dvc  evaluations.dvc  gen.sh  tree.dvc
data/sets/: .gitignore  scalefree.dvc  tree.dvc
docs/: report-testing.qmd  results-plots.qmd  sparse-parallel.ipynb
manual/: _config.yml  _toc.yml  api.rst  cli.md  dataset.md  index.md  install.md  references.bib
manual/_static/: jb-nist.css  nist-combined.css
manual/_templates/: footer.html  header.html
mendr/: __coconut__.py  __init__.py  __main__.py  experiments.py  generate.py  gmd_types.py  io.py  metrics.py  one_hot.py
nist_gmd/: __coconut__.py  __init__.py  generate.py  gmd_types.py  io.py  main.py  one_hot.py  types.py
results/: .gitignore  CS.jsonl.dvc  EFM.jsonl.dvc  FP.jsonl.dvc  GL.jsonl.dvc  HSS.jsonl.dvc  RP.jsonl.dvc
src/: generate.coco  gmd_types.coco  io.coco  metrics.coco  one_hot.coco
tests/: test_generate.py
