[tool.poetry]
name = "MENDR"
version = "0.3.4"
description = "Measurement Error in Network Diffusion Datasets for graph Reconstruction"
authors = ["Rachael T. Sexton <rtbs@nist.gov>"]
license = "NIST"
readme = "README.md"
packages = [{include = "mendr"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
networkx = "^3.2.1"
numpy = ">=1.26,<2.3"
scipy = "^1.12"
cyclopts = "^2.3"
csrgraph = {git = "https://github.com/VHRanger/CSRGraph.git"}
jaxtyping = "^0.2.25"
beartype = "^0.17.2"
pyserde = "^0.14"
sparse = "^0.15"
affinis = {git = "https://github.com/rtbs-dev/affinis.git"}
pyarrow = "^19.0"
autoregistry = "^1.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"
coconut = {extras = ["kernel"], version = "^3.0.4"}
hypothesis = {extras = ["numpy"], version = "^6.98.12"}
pytest = "^8.0.2"
hypothesis-networkx = "^0.3.0"
dvc = {extras = ["s3"], version = "^3.49.0"}
akimbo = "*"
polars = "^0.20"

[tool.poetry.group.report.dependencies]
dvclive = {extras = ["markdown", "sklearn"], version = "^3.45.0"}
seaborn = "^0.13.2"
great-tables = "^0.5.0"
statsmodels = "^0.14.2"
yappi = "^1.6.0"


[tool.poetry.group.docs.dependencies]
jupyter-book = "^1.0.2"
sphinx-autodoc-typehints = "<2.4.0"

[tool.poetry.scripts]
mendr = 'mendr.__main__:app'
# gmd-nist-rw = 'nist_gmd.main:random-graph-walks'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
